# materials-confounding-check

./: .gitignore  LICENSE  README.md  RESEARCH.md  pyproject.toml
sdd/: mission.md  plan.md  roadmap.md  spec.md  tasks.md  tech-stack.md  verify_mvp.md
src/materials_confounding_check/: __init__.py  check.py  cli.py  dataset_verify.py  io_data.py  metadata.py  models.py
src/materials_confounding_check/tests_/: __init__.py  fingerprint.py  metadata_clf.py  split_eval.py  verdict.py
tests/: conftest.py  test_ac1_pipeline.py  test_ac2_ac3_ac5.py  test_ac4_detection.py  test_cli.py  test_metadata.py  test_t008_dataset_verify.py  test_t008_dataset_verify_real.py
