[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "materials-confounding-check"
version = "0.1.0"
description = "CLI that applies the Clever Materials bibliographic-confounding falsification test to an arbitrary materials-science dataset."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Pedro Sordo Martínez", email = "amurlaniakea@gmail.com" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "scikit-learn>=1.5",
    "pandas>=2.0",
    "numpy>=1.26",
    "crossref-commons",
    "requests",
]

[project.scripts]
mcc = "materials_confounding_check.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: statistically-expensive tests (seed sweep over 100-permutation null); run with `-m slow`",
]
